package com.randioo.owlofwar_server_simplify_protobuf.protocol;

import "Entity.proto";

message WarShowWarChapterRequest{
	
}

message WarShowWarChapterResponse{
	optional WarChapterData currentChapterData = 1;
	repeated WarChapterData warChapterData = 2;
}

message WarShowWarBuildRequest{
	optional int32 chapterId = 1;
}

message WarShowWarBuildResponse{
	repeated WarBuildData warBuildData = 1;
}

message WarMarchRequest{
	optional int32 buildId = 1;
}

message WarMatchResponse{
	optional int32 errorCode = 1;
}
//更新建筑胜利信息
message WarWinBuildRequest{
	optional int32 buildId = 1;
	optional int32 starCount = 2;
}

message WarWinBuildResponse{
	optional int32 errorCode = 1 [default = 1];
}

//领取章节奖励
message WarGetChapterAwardRequest{
	optional int32 chapterId = 1;
}

message WarGetChapterAwardResponse{
	optional int32 errorCode = 1 [default = 1];
}